# Quake

./: .gitignore  PanzerQuake_readme.txt
WinQuake/: CMakeLists.txt  PanzerQuake logo.xcf  WinQuake.cbp  WinQuake.sln  WinQuake.vcproj  anorm_dots.h  anorms.h  bspfile.h  cd_null.c  cdaudio.h  chase.c  cl_demo.c  cl_input.c  cl_main.c  cl_parse.c  cl_tent.c  client.h  cmd.c  cmd.h  common.c  console.c  console.h  crc.c  crc.h  cvar.c  cvar.h  d_edge.c  d_fill.c  d_iface.h  d_init.c  d_local.h  d_modech.c  d_part.c  d_polyse.c  d_scan.c  d_sky.c  d_sprite.c  d_surf.c  d_vars.c  d_zpoint.c  (+109 more)
WinQuake/ID1/: autoexec.cfg  config.cfg  gl_quake.cfg
WinQuake/gas2masm/: gas2masm.c  gas2masm.vcproj
